--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
                         <a href="index.html" class="header-link link">Studio</a>
                     </li>
                     <li class="header-item">
-                        <a href="./portfolio.html" class="header-link link">Portfolio</a>
+                        <a href="./portfolio.html" class="header-link current link">Portfolio</a>
                     </li>
                     <li class="header-item">
                         <a href="" class="header-link link">Contacts</a>
@@ -70,7 +70,12 @@
                 <ul class="works-cards list">
                     <li class="card">
                         <a href="" class="card-link link">
-                            <img src="./images/portfolio/card1.jpg" alt="view of web application" class="card-img">
+                                <div class="card-box">
+                                    <img src="./images/portfolio/card1.jpg" alt="view of web application" class="card-img">
+                                    <div class="overlay">
+                                        <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    </div>
+                                </div>
                             <div class="card-content">
                                 <h2 class="card-title">Banking App Interface Concept</h2>
                                 <p class="card-text">App</p>
@@ -79,7 +84,12 @@
                     </li>
                     <li class="card">
                         <a href="" class="card-link link">
-                            <img src="./images/portfolio/card2.jpg" alt="moment of non-cash settlement" class="card-img">
+                            <div class="card-box">
+                                <img src="./images/portfolio/card2.jpg" alt="moment of non-cash settlement" class="card-img">
+                                <div class="overlay">
+                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="card-content">
                                 <h2 class="card-title">Cashless Payment</h2>
                                 <p class="card-text">Marketing</p>
@@ -88,7 +98,12 @@
                     </li>
                     <li class="card">
                         <a href="" class="card-link link">
-                            <img src="./images/portfolio/card3.jpg" alt="view of web application" class="card-img">
+                            <div class="card-box">
+                                <img src="./images/portfolio/card3.jpg" alt="view of web application" class="card-img">
+                                <div class="overlay">
+                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="card-content">
                                 <h2 class="card-title">Meditaion App</h2>
                                 <p class="card-text">App</p>
@@ -97,8 +112,12 @@
                     </li>
                     <li class="card">
                         <a href="" class="card-link link">
-                            <img src="./images/portfolio/card4.jpg"
-                                alt="a taxi driver who uses the app to receive orders" class="card-img">
+                            <div class="card-box">
+                                <img src="./images/portfolio/card4.jpg" alt="a taxi driver who uses the app to receive orders" class="card-img">
+                                <div class="overlay">
+                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="card-content">
                                 <h2 class="card-title">Taxi Service</h2>
                                 <p class="card-text">Marketing</p>
@@ -107,9 +126,12 @@
                     </li>
                     <li class="card">
                         <a href="" class="card-link link">
-                            <img src="./images/portfolio/card5.jpg"
-                                alt="phone monitor and several options of illustrations for the main screen"
-                                class="card-img">
+                            <div class="card-box">
+                                <img src="./images/portfolio/card5.jpg" alt="phone monitor and several options of illustrations for the main screen" class="card-img">
+                                <div class="overlay">
+                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="card-content">
                                 <h2 class="card-title">Screen Illustrations</h2>
                                 <p class="card-text">Design</p>
@@ -118,8 +140,12 @@
                     </li>
                     <li class="card">
                         <a href="" class="card-link link">
-                            <img src="./images/portfolio/card6.jpg" alt="girl smiling looking at the monitor screen"
-                                class="card-img">
+                            <div class="card-box">
+                                <img src="./images/portfolio/card6.jpg" alt="girl smiling looking at the monitor screen" class="card-img">
+                                <div class="overlay">
+                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="card-content">
                                 <h2 class="card-title">Online Courses</h2>
                                 <p class="card-text">Marketing</p>
@@ -128,8 +154,12 @@
                     </li>
                     <li class="card">
                         <a href="" class="card-link link">
-                            <img src="./images/portfolio/card7.jpg" alt="layouts for stories posts on Instagram"
-                                class="card-img">
+                            <div class="card-box">
+                                <img src="./images/portfolio/card7.jpg" alt="layouts for stories posts on Instagram" class="card-img">
+                                <div class="overlay">
+                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="card-content">
                                 <h2 class="card-title">Instagram Stories Concept</h2>
                                 <p class="card-text">Design</p>
@@ -138,8 +168,12 @@
                     </li>
                     <li class="card">
                         <a href="" class="card-link link">
-                            <img src="./images/portfolio/card8.jpg" alt="a woman carrying fruit in a shopper"
-                                class="card-img">
+                            <div class="card-box">
+                                <img src="./images/portfolio/card8.jpg" alt="a woman carrying fruit in a shopper" class="card-img">
+                                <div class="overlay">
+                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="card-content">
                                 <h2 class="card-title">Organic Food</h2>
                                 <p class="card-text">Web Site</p>
@@ -148,8 +182,12 @@
                     </li>
                     <li class="card">
                         <a href="" class="card-link link">
-                            <img src="./images/portfolio/card9.jpg"
-                                alt="barista making a pattern with milk foam on coffee" class="card-img">
+                            <div class="card-box">
+                                <img src="./images/portfolio/card9.jpg" alt="barista making a pattern with milk foam on coffee" class="card-img">
+                                <div class="overlay">
+                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                            </div>
                             <div class="card-content">
                                 <h2 class="card-title">Fresh Coffee</h2>
                                 <p class="card-text">Web Site</p>
