--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="./index.html" class="header-logo link"><span class="logo-acent">Web</span>Studio</a>
                 <ul class="header-list list">
                     <li class="header-item">
-                        <a href="" class="header-link link">Studio</a>
+                        <a href="" class="header-link current link">Studio</a>
                     </li>
                     <li class="header-item">
                         <a href="./portfolio.html" class="header-link link">Portfolio</a>
@@ -413,6 +413,17 @@
             </div>
         </div>
     </footer>
+
+ <!-- Modal window -->
+<div class="backdrop">
+    <div class="modal">
+        <button class="modal-btn" type="button">
+            <svg class="modal-icon" width="20" height="20">
+                <use href=""></use>
+            </svg>
+        </button>
+    </div>
+</div>
 </body>
 
 </html>
