--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
                                 <div class="card-box">
                                     <img src="./images/portfolio/card1.jpg" alt="view of web application" class="card-img">
                                     <div class="overlay">
-                                        <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                        <p class="overlay-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                     </div>
                                 </div>
                             <div class="card-content">
@@ -87,7 +87,7 @@
                             <div class="card-box">
                                 <img src="./images/portfolio/card2.jpg" alt="moment of non-cash settlement" class="card-img">
                                 <div class="overlay">
-                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="overlay-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div>
                             </div>
                             <div class="card-content">
@@ -101,7 +101,7 @@
                             <div class="card-box">
                                 <img src="./images/portfolio/card3.jpg" alt="view of web application" class="card-img">
                                 <div class="overlay">
-                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="overlay-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div>
                             </div>
                             <div class="card-content">
@@ -115,7 +115,7 @@
                             <div class="card-box">
                                 <img src="./images/portfolio/card4.jpg" alt="a taxi driver who uses the app to receive orders" class="card-img">
                                 <div class="overlay">
-                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="overlay-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div>
                             </div>
                             <div class="card-content">
@@ -129,7 +129,7 @@
                             <div class="card-box">
                                 <img src="./images/portfolio/card5.jpg" alt="phone monitor and several options of illustrations for the main screen" class="card-img">
                                 <div class="overlay">
-                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="overlay-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div>
                             </div>
                             <div class="card-content">
@@ -143,7 +143,7 @@
                             <div class="card-box">
                                 <img src="./images/portfolio/card6.jpg" alt="girl smiling looking at the monitor screen" class="card-img">
                                 <div class="overlay">
-                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="overlay-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div>
                             </div>
                             <div class="card-content">
@@ -157,7 +157,7 @@
                             <div class="card-box">
                                 <img src="./images/portfolio/card7.jpg" alt="layouts for stories posts on Instagram" class="card-img">
                                 <div class="overlay">
-                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="overlay-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div>
                             </div>
                             <div class="card-content">
@@ -171,7 +171,7 @@
                             <div class="card-box">
                                 <img src="./images/portfolio/card8.jpg" alt="a woman carrying fruit in a shopper" class="card-img">
                                 <div class="overlay">
-                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="overlay-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div>
                             </div>
                             <div class="card-content">
@@ -185,7 +185,7 @@
                             <div class="card-box">
                                 <img src="./images/portfolio/card9.jpg" alt="barista making a pattern with milk foam on coffee" class="card-img">
                                 <div class="overlay">
-                                    <p class="card-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="overlay-label">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div>
                             </div>
                             <div class="card-content">
