--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section class="section section-hero">
             <div class="container container-hero">
                 <h1 class="hero-title">Effective Solutions for Your Business</h1>
-                <button type="button" class="hero-button">Order Service</button>
+                <button class="hero-button" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
 
@@ -415,15 +415,18 @@
     </footer>
 
  <!-- Modal window -->
-<div class="backdrop">
+<div class="backdrop is-hidden" data-modal>
     <div class="modal">
-        <button class="modal-btn" type="button">
+        <button class="modal-btn" type="button" data-modal-close>
             <svg class="modal-icon" width="20" height="20">
-                <use href=""></use>
+                <use href="./images/icon.svg#icon-close"></use>
             </svg>
         </button>
     </div>
 </div>
+
+<script src="./js/modal.js"></script>
+
 </body>
 
 </html>
